<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/carPhoto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/carAboutRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/gutter_margin"
        app:layout_constraintTop_toBottomOf="@id/carPhoto">

        <TextView
            android:id="@+id/carYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/gutter_margin_min"
            android:text="2011"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/carMake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/gutter_margin_min"
            android:text="BMW"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/carModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/gutter_margin_min"
            android:text="3 Series"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/carTrim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/gutter_margin_min"
            android:text="328i"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/carAboutRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gutter_margin_min"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/gutter_margin"
        app:layout_constraintTop_toBottomOf="@+id/carAboutRow1">

        <TextView
            android:id="@+id/carPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/gutter_margin_min"
            android:text="18 2131 "
            android:textSize="@dimen/text_medium"/>

        <TextView
            android:id="@+id/carSeparator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/gutter_margin_min"
            android:text="|"
            android:textSize="@dimen/text_medium"/>

        <TextView
            android:id="@+id/carMileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/gutter_margin_min"
            android:text="39.1km"
            android:textSize="@dimen/text_medium"/>
    </LinearLayout>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/gutter_margin_min"
        android:layout_marginRight="@dimen/gutter_margin_min"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/carAboutRow2"/>
    <TextView
        android:id="@+id/carVehicleInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_info"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"/>
    <LinearLayout
        android:id="@+id/carSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carVehicleInfo"
        app:layout_constraintHorizontal_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/colorTextSection"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exterior_color"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/colorTextSection"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interior_color"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/colorTextSection"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drive_type"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/colorTextSection"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transmission"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/colorTextSection"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body_style"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/colorTextSection"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/engine"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/colorTextSection"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/colorTextSection"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/carDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/carVehicleInfo">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Location" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Exterior color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Interior color" />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_call_dealer"
        app:layout_constraintTop_toBottomOf="@id/carSummary"/>
</androidx.constraintlayout.widget.ConstraintLayout>